--- a/style.css
+++ b/style.css
@@ -38,6 +38,13 @@ body{
     margin: 0;
 }
 
+@media only screen and (max-width: 600px){
+    .main-nav{
+        font-size: 0.5em;
+        padding: 0;
+    }
+}
+
 .push{
     margin-left: auto;
 }
@@ -49,4 +56,13 @@ li {
 *{
     color: #f5f5f6;
     text-decoration: none;
+}
+
+/*  COVER */
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50vh; /* for responsive ecrã */
 }
