--- a/style.css
+++ b/style.css
@@ -65,4 +65,23 @@ li {
     align-items: center;
     justify-content: center;
     height: 50vh; /* for responsive ecrã */
+    
 }
+
+/* GRID */
+
+
+
+.grid-wrapper {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    
+}
+
+.box > img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
