--- a/style.css
+++ b/style.css
@@ -70,18 +70,19 @@ li {
 
 /* GRID */
 
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the image fills while maintaining its aspect ratio */
+}
 
 
 .grid-wrapper {
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr; /*standard */
     
 }
 
-.box > img {
-    width: 100%;
-    height: auto;
-    display: block;
-}
 
