--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ img {
 .grid-wrapper {
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-template-rows: 1fr; /*standard */
     
 }
