--- a/style.css
+++ b/style.css
@@ -6,19 +6,19 @@ body{
     cursor: pointer;
     color: #FFF;
     font-size: 2em;
-    border-radius: 4px;
+    border-radius: 1px;
     border: 1px solid #bbb;
     transition: all 0.3s linear;
 }
 
-
+/* Colors */
 
 .green {
     background-color: greenyellow;
 }
 
-.red {
-    background-color: red;
+.white {
+    background-color: white;
 }
 
 .blue {
@@ -30,6 +30,12 @@ body{
 }
 
 /* NAV */
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;  /* */
+}
 
 .main-nav {
     display: flex;
@@ -66,6 +72,11 @@ li {
     justify-content: center;
     height: 50vh; /* for responsive ecrã */
     
+}
+
+.cover {
+    width: 16rem;
+    background-color: #444;
 }
 
 /* GRID */
