--- a/style.css
+++ b/style.css
@@ -29,6 +29,14 @@ body{
     background-color: rgb(223, 223, 18);
 }
 
+
+.box:hover {
+    -webkit-transform: rotate(-7deg);
+    -moz-transform:  rotate(-7deg);
+    -o-transform:  rotate(-7deg);
+    transform:  rotate(-7deg);
+}
+
 /* NAV */
 
 .sticky {
