--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
     margin: auto 0;
+    font-family: "proxima nova light", "Helvetica Neue", Helvetica, Arial, Sans-serif;
+
 }
 
 .zone {
@@ -11,10 +13,14 @@ body{
     transition: all 0.3s linear;
 }
 
+/* Header */
+
+
+
 /* Colors */
 
-.green {
-    background-color: greenyellow;
+.black {
+    background-color: #111111;
 }
 
 .white {
@@ -37,7 +43,14 @@ body{
     transform:  rotate(-7deg);
 }
 
+
+/* Header */
+
+
+
 /* NAV */
+
+
 
 .sticky {
     position: fixed;
@@ -45,23 +58,42 @@ body{
     width: 100%;  /* */
 }
 
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
+.logo a {
+    background-image: url(logos/Marys\ Bean\ -\ Logo\ 05.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    display: flex;
+    width: 100px;
+    height: 100px;
+    position: relative;
+    top: 0;
+    text-indent: -99999px;
+    
+}
+
 .main-nav {
     display: flex;
     list-style: none;
     font-size: 0.7em;
-    margin: 0;
+    padding: 15px 20px;
+    margin: 1.5px;
+    color: #f5f5f6;
 }
 
 @media only screen and (max-width: 600px){
     .main-nav{
         font-size: 0.5em;
         padding: 0;
+        display: flex;
+        align-items: center;
     }
 }
 
-.push{
-    margin-left: auto;
-}
 
 li {
     padding: 20px;
